RESOLVED FIXED 171220
[GCrypt] RSASSA-PKCS1-v1_5 support
https://bugs.webkit.org/show_bug.cgi?id=171220
Summary [GCrypt] RSASSA-PKCS1-v1_5 support
Zan Dobersek
Reported 2017-04-24 07:05:15 PDT
[GCrypt] RSASSA-PKCS1-v1_5 support
Attachments
Patch (12.16 KB, patch)
2017-04-24 07:12 PDT, Zan Dobersek
no flags
Patch (15.51 KB, patch)
2017-04-26 01:12 PDT, Zan Dobersek
no flags
Patch for landing (15.24 KB, patch)
2017-05-29 09:24 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2017-04-24 07:12:59 PDT
Created attachment 307972 [details] Patch Still has to enable the relevant layout tests.
Build Bot
Comment 2 2017-04-24 07:14:48 PDT
Attachment 307972 [details] did not pass style-queue: ERROR: Source/WebCore/crypto/gcrypt/CryptoAlgorithmRSASSA_PKCS1_v1_5GCrypt.cpp:208: CryptoAlgorithmRSASSA_PKCS1_v1_5::platformSign is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/crypto/gcrypt/CryptoAlgorithmRSASSA_PKCS1_v1_5GCrypt.cpp:235: CryptoAlgorithmRSASSA_PKCS1_v1_5::platformVerify is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zan Dobersek
Comment 3 2017-04-26 01:12:52 PDT
Build Bot
Comment 4 2017-04-26 01:15:18 PDT
Attachment 308232 [details] did not pass style-queue: ERROR: Source/WebCore/crypto/gcrypt/CryptoAlgorithmRSASSA_PKCS1_v1_5GCrypt.cpp:208: CryptoAlgorithmRSASSA_PKCS1_v1_5::platformSign is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/crypto/gcrypt/CryptoAlgorithmRSASSA_PKCS1_v1_5GCrypt.cpp:235: CryptoAlgorithmRSASSA_PKCS1_v1_5::platformVerify is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jiewen Tan
Comment 5 2017-05-22 12:06:20 PDT
Comment on attachment 308232 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=308232&action=review > Source/WebCore/crypto/gcrypt/CryptoAlgorithmRSASSA_PKCS1_v1_5GCrypt.cpp:199 > + error = gcry_pk_verify(signatureSexp, dataSexp, keySexp); A crypto expert just pointed it out that we should not report any operation error if verification fails. Maybe you should consider just returning true/false for verification as well. I have filed: Bug 171983 for Apple ports. Otherwise, looks good to me as well.
Zan Dobersek
Comment 6 2017-05-29 09:24:58 PDT
Created attachment 311476 [details] Patch for landing Addresses the comments about the verification step.
Zan Dobersek
Comment 7 2017-05-30 00:27:38 PDT
Comment on attachment 311476 [details] Patch for landing Clearing flags on attachment: 311476 Committed r217545: <http://trac.webkit.org/changeset/217545>
Zan Dobersek
Comment 8 2017-05-30 00:27:42 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2017-05-30 20:30:21 PDT
Note You need to log in before you can comment on or make changes to this bug.